# servipalbot

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/emails/: page.tsx
client/src/app/health/: page.tsx
client/src/app/leads/: page.tsx
client/src/app/login/: actions.ts  page.tsx
client/src/app/logs/: page.tsx
client/src/app/settings/: page.tsx
client/src/components/: action-forms.tsx  leads-table.tsx  log-list.tsx  sidebar.tsx  stats-cards.tsx
client/src/components/ui/: badge.tsx
client/src/utils/supabase/: middleware.ts
server/: .env.example  Dockerfile  pyproject.toml
server/app/: main.py
server/app/ai_engine/: engine.py
server/app/config/: config.py
server/app/db/: add_email_messages.sql  database.py  drop_all.sql  schema_check.sql  script.sql
server/app/media/: email_client.py  notifier.py  scheduler.py  social_media.py  whatsapp.py
server/app/schemas/: schemas.py
server/app/scraper/: scraper.py
server/scripts/: check_integrations.py  create_runtime_settings.sql
